[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Main.gd" type="Script" id=1]
[ext_resource path="res://sounds/secretsolved.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/rotateleft.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/rotateright.wav" type="AudioStream" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateLeftSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="RotateRightSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="CodeEnteredSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
